tests/should_fail/bad_function_name_after_def.jou
def 'x'():  # Error: expected a function name, got an integer
    return 'x'
